SET (LIB_SRC loop.cc server.cc connection.h inetaddr.h buffer.h buffer.cc)
ADD_DEFINITIONS(-std=c++11)
ADD_LIBRARY(net_static STATIC ${LIB_SRC})
ADD_LIBRARY(net_shared SHARED ${LIB_SRC})
SET_TARGET_PROPERTIES(net_static PROPERTIES OUTPUT_NAME "net")
SET_TARGET_PROPERTIES(net_shared PROPERTIES OUTPUT_NAME "net")
#SET_TARGET_PROPERTIES(net_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(net_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)
